--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "com.tubby-boy-studios.Ikfootplacement",
+  "name": "com.tubby-boy-studios.ikfootplacement",
   "version": "1.0.0",
   "displayName": "Ikfootplacement",
   "description": "IKFootPlacement.",
